Fix local stack payments and admin tooling